# MGTLR

./: .gitignore  README.md  music_generator_with_LSTMs.ipynb  music_generator_with_RNNs.ipynb  pyproject.toml
music_generator/: train.py
music_generator/app/: HTMLS.py  main.py  utils.py
music_generator/app/abc_dir/: abs_song_2024-07-08_17-56-43.abc  abs_song_2024-07-08_20-36-42.abc  song_details.json
music_generator/app/style/: style.css
music_generator/core/: config.py
music_generator/data/: dataloader.py  utils.py
music_generator/model/: MGBlock.py  MGFeedForward.py  MGLayerNorm.py  MGMaskAttention.py  MGTransformer.py  utils.py
music_generator/model/LSTM/from_scratch/: LSTM.py  LSTMBlock.py  MGLSTM.py
music_generator/model/LSTM/with_torch_api/: PyLSTM.py  PyMGLSTM.py
music_generator/model/RNN/: utils.py
music_generator/model/RNN/from_scratch/: MGRNN.py  RNN.py  RNNBlock.py
music_generator/model/RNN/with_torch_api/: PyMGRNN.py  PyRNN.py
music_generator/model/TRF/: MGBlock.py  MGFeedForward.py  MGLayerNorm.py  MGMaskAttention.py  MGTransformer.py  utils.py
music_generator/tests/tokenizer/: test_keras_tokenizer.py  test_mg_tokenizer.py  test_naive_tokenizer.py
music_generator/tokenizing/: train_keras_tokenizer.py  train_mg_tokenizer.py
music_generator/tokenizing/tokenizer/: KerasTokenizer.py  MGTokenizer.py  NaiveTokenizer.py
music_generator/train/: lstm_train.py  rnn_train.py  trf_train.py
