[tool.poetry]
name = "music_generator"
version = "0.1.0"
description = "this is a simple implementation of rnn, lstm and transformers to generate music"
authors = ["Ben alla ismail <ismailbenalla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
matplotlib = "^3.8.4"
ipython = "^8.24.0"
torchvision = "^0.18.0"
scikit-learn = "^1.4.2"
streamlit = "^1.34.0"
regex = "^2024.5.15"
tensorflow = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
streamlit = "music_generator.app.main:main"

